--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:100,300,400,500,700" crossorigin />
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:100,300,400,500,700,900" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:100,300,400,500,700,900" media="print" onload="this.media='all'" />
+    <!-- <link rel="preload" as="style" href="https://overpass-30e2.kxcdn.com/overpass.css" /> -->
+    <link rel="stylesheet" href="https://overpass-30e2.kxcdn.com/overpass.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
